Styles: some very minor cosmetics changes

--- a/Presentation/Demo/styles.module.scss
+++ b/Presentation/Demo/styles.module.scss
@@ -9,10 +9,16 @@
     }
 
     .demo-action-panel {
-      padding: $demoContentPadding;
+      padding: $demoActionPanelPadding;
       display: flex;
       justify-content: flex-end;
       border-top: $demoActionPanelBorder;
+
+      .demo-code-button {
+        padding: $demoActionPanelButtonPadding;
+        max-height: fit-content;
+        min-height: fit-content;
+      }
     }
 
     .demo-code {
