--- a/constants/styles/globalColors.module.scss
+++ b/constants/styles/globalColors.module.scss
@@ -30,7 +30,7 @@
 $BACKGROUND: #0b1111;
 $BLOCK_BACKGROUND: #222e37;
 $DARKER_BLOCK_BACKGROUND: #1a232c;
-$MENU_BACKGROUND: #333c4a;
+$MENU_BACKGROUND: #11151d;
 
 // Typography
 $MAIN_FONT_COLOR: #ffffff;
@@ -42,6 +42,7 @@ $MAIN_GRAY_ACTION_COLOR: #b1b1b1;
 $MAIN_GREEN_ACTION_COLOR: #14b8a4;
 $MAIN_GREEN_ACTION_HOVER_COLOR: #28ccb8;
 $MAIN_GREEN_ACTION_PRESSED_COLOR: #00a490;
+$MAIN_GREEN_ACTION_ACTIVE_COLOR: #14B8A421;
 $MAIN_BLUE_ACTION_COLOR: #255cc0;
 $MAIN_BLUE_ACTION_HOVER_COLOR: #3970d4;
 $MAIN_BLUE_ACTION_PRESSED_COLOR: #1148ac;
