--- a/Navigation/Menu/styles.module.scss
+++ b/Navigation/Menu/styles.module.scss
@@ -12,7 +12,7 @@
       cursor: pointer;
       padding: $menuItemPadding;
       border-radius: 10px;
-      color: $menuItemColor !important;
+      color: $menuItemColor;
       font-size: $menuItemFontSize;
       line-height: $menuItemFontLineHeight;
       min-height: $menuItemHeight;
@@ -20,10 +20,12 @@
       text-align: left;
       justify-content: flex-start;
       margin-bottom: $menuItemMarginBetweenItems;
+      border-radius: $menuItemBorderRadius;
 
       &:hover,
       &.active {
         background-color: $menuItemHoverBackgroundColor;
+        color: $menuItemHoverColor;
       }
 
       &:last-child {
