--- a/Navigation/Menu/variables.module.scss
+++ b/Navigation/Menu/variables.module.scss
@@ -8,11 +8,13 @@ $menuPadding: $DEFAULT_LISTS_OUTER_TOP_BOTTOM_PADDING
 $menuItemPadding: $DEFAULT_LISTS_ITEM_TOP_BOTTOM_PADDING
   $DEFAULT_LISTS_ITEM_SIDES_PADDING;
 $menuItemColor: $DEFAULT_WHITE_TEXT_COLOR;
-$menuItemHoverBackgroundColor: $MAIN_GREEN_ACTION_HOVER_COLOR;
+$menuItemHoverColor: $MAIN_GREEN_ACTION_COLOR;
+$menuItemHoverBackgroundColor: $MAIN_GREEN_ACTION_ACTIVE_COLOR;
 $menuItemFontSize: 14px;
 $menuItemFontLineHeight: 18px;
 $menuItemMarginBetweenItems: 5px;
+$menuItemBorderRadius: 3px;
 $menuItemHeight: $menuItemFontLineHeight + 2 *
   $DEFAULT_LISTS_ITEM_TOP_BOTTOM_PADDING;
-$menuCategoryBorderColor: $menuItemHoverBackgroundColor;
+$menuCategoryBorderColor: $MAIN_GREEN_ACTION_COLOR;
 $menuCategoryFontSize: $menuItemFontSize + 2;
