--- a/Presentation/Code/styles.module.scss
+++ b/Presentation/Code/styles.module.scss
@@ -3,20 +3,30 @@
 @layer basic-ui {
   .code {
     background: $codeBackgroundColor;
-    border-radius: $DEFAULT_BORDER_RADIUS;
-    padding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING $DEFAULT_CONTENT_SIDES_PADDING;
     position: relative;
+    border-radius: $DEFAULT_SMALL_BORDER_RADIUS;
+    padding: $codePadding;
+    border-left: 5px solid $codeBorderColor;
 
     .line {
       .line-number {
+        margin-right: $codeLineNumberMargin;
         user-select: none;
+        opacity: 0.5;
+      }
+      .line-text {
+        opacity: 0.9;
       }
     }
 
     button.copy-button {
+      opacity: 0.8;
       position: absolute;
       top: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING / 2;
       right: $DEFAULT_CONTENT_SIDES_PADDING / 2;
+      &:hover {
+        opacity: 1;
+      }
     }
   }
 }
