--- a/constants/styles/globalSizes.module.scss
+++ b/constants/styles/globalSizes.module.scss
@@ -5,6 +5,7 @@ $DEFAULT_CONTENT_SIDES_PADDING: 50px;
 $DEFAULT_CONTENT_TOP_BOTTOM_PADDING: 40px;
 $DEFAULT_INNER_CONTENT_MARGIN: 10px;
 $DEFAULT_BORDER_RADIUS: 16px;
+$DEFAULT_SMALL_BORDER_RADIUS: 4px;
 $DEFAULT_ITEMS_MARGIN: 20px;
 // lists
 $DEFAULT_LISTS_OUTER_SIDES_PADDING: 16px;
