--- a/constants/styles/globalSizes.module.scss
+++ b/constants/styles/globalSizes.module.scss
@@ -7,6 +7,7 @@ $DEFAULT_INNER_CONTENT_MARGIN: 10px;
 $DEFAULT_BORDER_RADIUS: 16px;
 $DEFAULT_SMALL_BORDER_RADIUS: 4px;
 $DEFAULT_ITEMS_MARGIN: 20px;
+$DEFAULT_LAYOUT_ITEMS_GAP: 20px;
 // lists
 $DEFAULT_LISTS_OUTER_SIDES_PADDING: 16px;
 $DEFAULT_LISTS_OUTER_TOP_BOTTOM_PADDING: 18px;
