--- a/Layout/Beam/variables.module.scss
+++ b/Layout/Beam/variables.module.scss
@@ -1,3 +1,4 @@
 @import "@/ui/constants/styles/globalSizes.module.scss";
 
-$beamMargin: 0 $DEFAULT_INNER_CONTENT_MARGIN;
+$beamMargin: 0 $DEFAULT_LAYOUT_ITEMS_GAP / 2;
+$beamGap: $DEFAULT_LAYOUT_ITEMS_GAP;
