--- a/Presentation/Title/styles.module.scss
+++ b/Presentation/Title/styles.module.scss
@@ -1,12 +1,12 @@
+@import "./variables.module.scss";
+
 @layer basic-ui {
   h1.title {
     font-size: 2.986rem;
-    padding: 1.6rem 0px;
   }
 
   h2.title {
     font-size: 2.488rem;
-    padding: 1.4rem 0px;
   }
 
   h3.title {
@@ -26,8 +26,12 @@
   }
 
   .title {
+    &.half-padding {
+      padding: $DEFAULT_LAYOUT_ITEMS_GAP / 2 0px;
+    }
+
     margin: 0;
-    padding: 1rem 0px;
+    padding: $DEFAULT_LAYOUT_ITEMS_GAP 0px;
 
     &.without-top-padding {
       padding-top: 0;
