--- a/Layout/Brick/variables.module.scss
+++ b/Layout/Brick/variables.module.scss
@@ -5,3 +5,7 @@
 $brickBackground: $BLOCK_BACKGROUND;
 $brickPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING
   $DEFAULT_CONTENT_SIDES_PADDING;
+$brickMediumPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING_MEDIUM
+  $DEFAULT_CONTENT_SIDES_PADDING_MEDIUM;
+$brickSmallPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING_SMALL
+  $DEFAULT_CONTENT_SIDES_PADDING_SMALL;
