--- a/Layout/Pillar/styles.module.scss
+++ b/Layout/Pillar/styles.module.scss
@@ -12,7 +12,7 @@
 
   @for $i from 1 through 12 {
     // Extra small devices (portrait phones, less than 576px)
-    @media (max-width: 575.98px) {
+    @media (max-width: $extraSmallDevices) {
       &.pillar-xs-#{$i} {
         width: calc(
           100% * $i / $columnCount - ($columnCount - $i) *
@@ -31,7 +31,7 @@
 
   @for $i from 1 through 12 {
     // Small devices (landscape phones, 576px and up)
-    @media (min-width: 576px) {
+    @media (min-width: $smallDevices) {
       &.pillar-sm-#{$i} {
         width: calc(
           100% * $i / $columnCount - ($columnCount - $i) *
@@ -50,7 +50,7 @@
 
   @for $i from 1 through 12 {
     // Medium devices (tablets, 768px and up)
-    @media (min-width: 768px) {
+    @media (min-width: $mediumDevices) {
       &.pillar-md-#{$i} {
         width: calc(
           100% * $i / $columnCount - ($columnCount - $i) *
@@ -69,7 +69,7 @@
 
   @for $i from 1 through 12 {
     // Large devices (desktops, 992px and up)
-    @media (min-width: 992px) {
+    @media (min-width: $largeDevices) {
       &.pillar-lg-#{$i} {
         width: calc(
           100% * $i / $columnCount - ($columnCount - $i) *
