--- a/Layout/Wall/variables.module.scss
+++ b/Layout/Wall/variables.module.scss
@@ -3,3 +3,7 @@
 
 $wallBackground: $BACKGROUND;
 $wallPadding: $DEFAULT_OUTER_TOP_BOTTOM_PADDING $DEFAULT_OUTER_SIDES_PADDING;
+$wallPaddingMedium: $DEFAULT_OUTER_TOP_BOTTOM_PADDING_MEDIUM
+  $DEFAULT_OUTER_SIDES_PADDING_MEDIUM;
+$wallPaddingSmall: $DEFAULT_OUTER_TOP_BOTTOM_PADDING_SMALL
+  $DEFAULT_OUTER_SIDES_PADDING_SMALL;
