--- a/Presentation/Demo/variables.module.scss
+++ b/Presentation/Demo/variables.module.scss
@@ -4,6 +4,10 @@
 
 $demoContentPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING
   $DEFAULT_CONTENT_SIDES_PADDING;
+$demoMediumContentPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING_MEDIUM
+  $DEFAULT_CONTENT_SIDES_PADDING_MEDIUM;
+$demoSmallContentPadding: $DEFAULT_CONTENT_TOP_BOTTOM_PADDING_SMALL
+  $DEFAULT_CONTENT_SIDES_PADDING_SMALL;
 $demoActionPanelPadding: $DEFAULT_LISTS_ITEM_TOP_BOTTOM_PADDING
   $DEFAULT_CONTENT_SIDES_PADDING;
 $demoActionPanelBorder: 2px solid $DARKER_BLOCK_BACKGROUND;
