--- a/constants/styles/globalSizes.module.scss
+++ b/constants/styles/globalSizes.module.scss
@@ -1,9 +1,26 @@
+// media settings
+$extraSmallDevices: 575.98px;
+$smallDevices: 576px;
+$mediumDevices: 768px;
+$largeDevices: 992px;
+// sizes
 $MAIN_FONT_SIZE: 16px;
+$MAIN_FONT_SIZE_MEDIUM: 14px;
+$MAIN_FONT_SIZE_SMALL: 12px;
 $DEFAULT_OUTER_SIDES_PADDING: 120px;
+$DEFAULT_OUTER_SIDES_PADDING_MEDIUM: 80px;
+$DEFAULT_OUTER_SIDES_PADDING_SMALL: 20px;
 $DEFAULT_OUTER_TOP_BOTTOM_PADDING: 70px;
+$DEFAULT_OUTER_TOP_BOTTOM_PADDING_MEDIUM: 50px;
+$DEFAULT_OUTER_TOP_BOTTOM_PADDING_SMALL: 20px;
 $DEFAULT_CONTENT_SIDES_PADDING: 50px;
+$DEFAULT_CONTENT_SIDES_PADDING_MEDIUM: 30px;
+$DEFAULT_CONTENT_SIDES_PADDING_SMALL: 10px;
 $DEFAULT_CONTENT_TOP_BOTTOM_PADDING: 40px;
+$DEFAULT_CONTENT_TOP_BOTTOM_PADDING_MEDIUM: 30px;
+$DEFAULT_CONTENT_TOP_BOTTOM_PADDING_SMALL: 10px;
 $DEFAULT_INNER_CONTENT_MARGIN: 10px;
+$DEFAULT_INNER_CONTENT_MARGIN_MEDIUM: 5px;
 $DEFAULT_BORDER_RADIUS: 16px;
 $DEFAULT_SMALL_BORDER_RADIUS: 4px;
 $DEFAULT_ITEMS_MARGIN: 20px;
