--- a/Navigation/TabPanel/variables.module.scss
+++ b/Navigation/TabPanel/variables.module.scss
@@ -7,4 +7,8 @@ $tabPanelBorderColor: $ADDITIONAL_BLOCK_BACKGROUND;
 $tabPanelActiveColor: $MAIN_GREEN_ACTION_COLOR;
 $tabPanelBorder: $tabBorderSize solid $ADDITIONAL_BLOCK_BACKGROUND;
 $tabPadding: 16px 70px;
+$tabPaddingMedium: 16px 50px;
+$tabPaddingSmall: 12px 20px;
 $tabMargin: 90px;
+$tabMarginMedium: 60px;
+$tabMarginSmall: 20px;
