--- a/Presentation/Code/styles.module.scss
+++ b/Presentation/Code/styles.module.scss
@@ -9,6 +9,8 @@
     border-left: 5px solid $codeBorderColor;
     max-width: 100%;
     box-sizing: border-box;
+    overflow: auto;
+    max-height: 400px;
 
     .line {
       .line-number {
