--- a/Navigation/TabPanel/variables.module.scss
+++ b/Navigation/TabPanel/variables.module.scss
@@ -4,7 +4,7 @@
 
 $tabBorderSize: 6px;
 $tabPanelBorderColor: $ADDITIONAL_BLOCK_BACKGROUND;
-$tabPanelActiveColor: $MAIN_GREEN_ACTION_COLOR;
+$tabPanelActiveColor: $MAIN_PRIMARY_ACTION_COLOR;
 $tabPanelBorder: $tabBorderSize solid $ADDITIONAL_BLOCK_BACKGROUND;
 $tabPadding: 16px 70px;
 $tabPaddingMedium: 16px 50px;
