--- a/Presentation/Code/variables.module.scss
+++ b/Presentation/Code/variables.module.scss
@@ -3,7 +3,7 @@
 @import "@/ui/constants/styles/globalVariables.module.scss";
 
 $codeBackgroundColor: $DARKER_BLOCK_BACKGROUND;
-$codeBorderColor: $MAIN_GREEN_ACTION_COLOR;
+$codeBorderColor: $MAIN_PRIMARY_ACTION_COLOR;
 $codePadding: $DEFAULT_LISTS_ITEM_TOP_BOTTOM_PADDING * 2
   $DEFAULT_LISTS_ITEM_SIDES_PADDING * 2;
 $codeLineNumberMargin: $DEFAULT_LISTS_ITEM_SIDES_PADDING;
