--- a/constants/styles/globalColors.module.scss
+++ b/constants/styles/globalColors.module.scss
@@ -1,29 +1,3 @@
-// $flatFlesh: #fad390;
-// $squashBlossom: #f6b93b;
-// $icelandPoppy: #fa983a;
-// $carrotOrange: #e58e26;
-
-// $melonMelody: #f8c291;
-// $mandarinRed: #e55039;
-// $tomatoRed: #eb2f06;
-// $jalapenoRed: #b71540;
-
-// $livid: #6a89cc;
-// $azraqBlue: #4a69bd;
-// $yueGuangLanBlue: #1e3799;
-// $darkSapphire: #0c2461;
-
-// $spray: #82ccdd;
-// $dupain: #60a3bc;
-// $goodSamaritain: #3c6382;
-// $forestBlue: #0a3d62;
-// $nightForestBlue: #06253b;
-
-// $paradiseGreen: #b8e994;
-// $auroraGreen: #78e08f;
-// $waterfall: #38ada9;
-// $reefEncounter: #079992;
-
 // Basic colors
 
 // Backgrounds
@@ -40,13 +14,13 @@ $DEFAULT_DARK_TEXT_COLOR: #0b1111;
 
 // Actions
 $MAIN_GRAY_ACTION_COLOR: #b1b1b1;
-$MAIN_GREEN_ACTION_COLOR: #14b8a4;
-$MAIN_GREEN_ACTION_HOVER_COLOR: #28ccb8;
-$MAIN_GREEN_ACTION_PRESSED_COLOR: #00a490;
-$MAIN_GREEN_ACTION_ACTIVE_COLOR: #14b8a421;
-$MAIN_BLUE_ACTION_COLOR: #255cc0;
-$MAIN_BLUE_ACTION_HOVER_COLOR: #3970d4;
-$MAIN_BLUE_ACTION_PRESSED_COLOR: #1148ac;
+$MAIN_PRIMARY_ACTION_COLOR: #14b8a4;
+$MAIN_PRIMARY_ACTION_HOVER_COLOR: #28ccb8;
+$MAIN_PRIMARY_ACTION_PRESSED_COLOR: #00a490;
+$MAIN_PRIMARY_ACTION_ACTIVE_COLOR: #14b8a421;
+$MAIN_SECONDARY_ACTION_COLOR: #255cc0;
+$MAIN_SECONDARY_ACTION_HOVER_COLOR: #3970d4;
+$MAIN_SECONDARY_ACTION_PRESSED_COLOR: #1148ac;
 $MAIN_SEA_ACTION_COLOR: #7ed7cc;
 $MAIN_SEA_ACTION_HOVER_COLOR: #92ebe0;
 $MAIN_SEA_ACTION_PRESSED_COLOR: #6ac3b8;
