--- a/Presentation/Title/styles.module.scss
+++ b/Presentation/Title/styles.module.scss
@@ -3,26 +3,32 @@
 @layer basic-ui {
   h1.title {
     font-size: 2.986rem;
+    line-height: 3.486rem;
   }
 
   h2.title {
     font-size: 2.488rem;
+    line-height: 2.988rem;
   }
 
   h3.title {
     font-size: 2.074rem;
+    line-height: 2.574rem;
   }
 
   h4.title {
     font-size: 1.728rem;
+    line-height: 2.228rem;
   }
 
   h5.title {
     font-size: 1.44rem;
+    line-height: 1.94rem;
   }
 
   h6.title {
     font-size: 1.2rem;
+    line-height: 1.7rem;
   }
 
   .title {
