Ui: add field and input components

--- a/Form/Field/variables.module.scss
+++ b/Form/Field/variables.module.scss
@@ -1,5 +1,5 @@
 @import "@/ui/constants/styles/globalColors.module.scss";
+@import "@/ui/constants/styles/globalSizes.module.scss";
 @import "@/ui/constants/styles/globalVariables.module.scss";
 
-$color: $MAIN_PRIMARY_ACTION_COLOR;
-$alternativeColor: #000;
+$errorColor: $MAIN_ORANGE_ACTION_COLOR;
