--- a/Form/Input/variables.module.scss
+++ b/Form/Input/variables.module.scss
@@ -1,5 +1,3 @@
 @import "@/ui/constants/styles/globalColors.module.scss";
+@import "@/ui/constants/styles/globalSizes.module.scss";
 @import "@/ui/constants/styles/globalVariables.module.scss";
-
-$color: $MAIN_PRIMARY_ACTION_COLOR;
-$alternativeColor: #000;
