--- a/constants/styles/globalColors.module.scss
+++ b/constants/styles/globalColors.module.scss
@@ -33,3 +33,9 @@ $MAIN_ORANGE_ACTION_COLOR: #ffc195;
 $MAIN_ORANGE_ACTION_HOVER_COLOR: #ffd5a9;
 $MAIN_ORANGE_ACTION_PRESSED_COLOR: #d7ad81;
 $MAIN_ORANGE_ACTION_FONT_COLOR: #a5673b;
+
+// Forms
+$FORM_INNER_BACKGROUND: #1b252c;
+$FORM_PLACEHOLDER_COLOR: $MAIN_GRAY_ACTION_COLOR;
+$FORM_ACTIVE_BORDER_COLOR: $MAIN_PRIMARY_ACTION_COLOR;
+$FORM_ERROR_BORDER_COLOR: $MAIN_ORANGE_ACTION_COLOR;
