--- a/constants/styles/globalSizes.module.scss
+++ b/constants/styles/globalSizes.module.scss
@@ -30,3 +30,8 @@ $DEFAULT_LISTS_OUTER_SIDES_PADDING: 16px;
 $DEFAULT_LISTS_OUTER_TOP_BOTTOM_PADDING: 18px;
 $DEFAULT_LISTS_ITEM_SIDES_PADDING: 12px;
 $DEFAULT_LISTS_ITEM_TOP_BOTTOM_PADDING: 9px;
+// forms
+$DEFAULT_FORMS_BORDER_RADIUS: 10px;
+$DEFAULT_FORMS_ELEMENT_HEIGHT: 53px;
+$DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING: 28px;
+$DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING: 14px;
