--- a/constants/styles/globalColors.module.scss
+++ b/constants/styles/globalColors.module.scss
@@ -36,6 +36,7 @@ $MAIN_ORANGE_ACTION_FONT_COLOR: #a5673b;
 
 // Forms
 $FORM_INNER_BACKGROUND: #1b252c;
+$FORM_BORDER_COLOR: $MAIN_GRAY_ACTION_COLOR;
 $FORM_PLACEHOLDER_COLOR: $MAIN_GRAY_ACTION_COLOR;
 $FORM_ACTIVE_BORDER_COLOR: $MAIN_PRIMARY_ACTION_COLOR;
 $FORM_ERROR_BORDER_COLOR: $MAIN_ORANGE_ACTION_COLOR;
