--- a/Form/Input/styles.module.scss
+++ b/Form/Input/styles.module.scss
@@ -3,27 +3,60 @@
 .input-container {
   position: relative;
   width: 100%;
+  min-height: $DEFAULT_FORMS_ELEMENT_HEIGHT;
+  max-height: $DEFAULT_FORMS_ELEMENT_HEIGHT;
+  border-radius: $DEFAULT_FORMS_BORDER_RADIUS;
 
   input {
     width: 100%;
-    background: $FORM_INNER_BACKGROUND;
-    border-radius: $DEFAULT_FORMS_BORDER_RADIUS;
-    border: 1px solid $FORM_INNER_BACKGROUND;
     min-height: $DEFAULT_FORMS_ELEMENT_HEIGHT;
     max-height: $DEFAULT_FORMS_ELEMENT_HEIGHT;
+    border: 0;
     box-sizing: border-box;
     padding: $DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING
       $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING;
     text-overflow: ellipsis;
+    border-radius: inherit;
 
     &:focus {
       border-color: $FORM_ACTIVE_BORDER_COLOR;
     }
 
     &::placeholder,
-    &::-webkit-input-placeholder,
-    &:-ms-input-placeholder {
+    &::-webkit-input-placeholder {
       color: $FORM_PLACEHOLDER_COLOR;
+    }
+
+    &:not(:placeholder-shown) {
+      & + label {
+        z-index: 1;
+        user-select: none;
+        pointer-events: auto;
+        max-width: calc(
+          100% - $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING * 2
+        );
+        transform: translate(
+            $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING * 0.75,
+            -($DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING * 0.75)
+          )
+          scale(0.75);
+      }
+
+      & ~ fieldset {
+        legend {
+          max-width: 100%;
+          -webkit-transition: max-width 100ms cubic-bezier(0, 0, 0.2, 1) 50ms;
+          transition: max-width 100ms cubic-bezier(0, 0, 0.2, 1) 50ms;
+
+          .label-text {
+            padding-left: 2px;
+            padding-right: 2px;
+            display: inline-block;
+            opacity: 0;
+            visibility: visible;
+          }
+        }
+      }
     }
   }
 
@@ -32,6 +65,7 @@
     right: $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING;
     top: $DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING / 2;
   }
+
   .input-icon {
     position: absolute;
     cursor: default;
@@ -92,6 +126,139 @@
   &.loading {
     input {
       padding-right: $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING * 2.5;
+    }
+  }
+
+  &.filled {
+    input {
+      background: $FORM_INNER_BACKGROUND;
+      border: 1px solid $FORM_INNER_BACKGROUND;
+    }
+  }
+
+  fieldset {
+    text-align: left;
+    position: absolute;
+    inset: 0px;
+    margin: 0px;
+    padding: 0px $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING / 2;
+    pointer-events: none;
+    border-radius: inherit;
+    border-style: solid;
+    border-width: 1px;
+    overflow: hidden;
+    min-width: 0%;
+    border-color: $FORM_BORDER_COLOR;
+
+    legend {
+      float: unset;
+      width: auto;
+      overflow: hidden;
+      display: block;
+      padding: 0;
+      height: 11px;
+      font-size: 0.75rem;
+      visibility: hidden;
+      max-width: 0.01px;
+      white-space: nowrap;
+    }
+  }
+
+  &.animated-label {
+    input {
+      &::placeholder,
+      &::-webkit-input-placeholder {
+        color: transparent;
+        opacity: 0;
+      }
+    }
+
+    label {
+      display: block;
+      transform-origin: left top;
+      text-overflow: ellipsis;
+      position: absolute;
+      left: 0px;
+      top: 0px;
+      z-index: 1;
+      pointer-events: none;
+      transform: translate(
+          $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING,
+          $DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING
+        )
+        scale(1);
+      max-width: calc(100% - $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING * 2);
+      padding: 0px;
+      white-space: nowrap;
+      overflow: hidden;
+      transition:
+        color 200ms cubic-bezier(0, 0, 0.2, 1),
+        transform 200ms cubic-bezier(0, 0, 0.2, 1),
+        max-width 200ms cubic-bezier(0, 0, 0.2, 1);
+    }
+
+    fieldset {
+      inset: -5px 0px 0px;
+      legend {
+        -webkit-transition: max-width 50ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+        transition: max-width 50ms cubic-bezier(0, 0, 0.2, 1) 0ms;
+      }
+    }
+
+    &.without-animation,
+    &.has-value,
+    &:focus-within,
+    &:focus-visible {
+      input {
+        &::placeholder,
+        &::-webkit-input-placeholder {
+          color: $FORM_PLACEHOLDER_COLOR;
+          opacity: 1;
+        }
+      }
+
+      label {
+        z-index: 1;
+        user-select: none;
+        pointer-events: auto;
+        max-width: calc(
+          100% - $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING * 2
+        );
+        transform: translate(
+            $DEFAULT_FORMS_ELEMENT_CONTENT_SIDES_PADDING * 0.75,
+            -($DEFAULT_FORMS_ELEMENT_CONTENT_TOP_BOTTOM_PADDING * 0.75)
+          )
+          scale(0.75);
+      }
+
+      fieldset {
+        legend {
+          max-width: 100%;
+          -webkit-transition: max-width 100ms cubic-bezier(0, 0, 0.2, 1) 50ms;
+          transition: max-width 100ms cubic-bezier(0, 0, 0.2, 1) 50ms;
+
+          .label-text {
+            padding-left: 2px;
+            padding-right: 2px;
+            display: inline-block;
+            opacity: 0;
+            visibility: visible;
+          }
+        }
+      }
+    }
+
+    &:focus-within,
+    &:focus-visible {
+      fieldset {
+        border-color: $FORM_ACTIVE_BORDER_COLOR;
+      }
+    }
+
+    &.error {
+      fieldset {
+        border-color: $FORM_ERROR_BORDER_COLOR;
+      }
     }
   }
 }
