Ui: add popupConatiner component

--- a/constants/styles/globalColors.module.scss
+++ b/constants/styles/globalColors.module.scss
@@ -6,6 +6,7 @@ $BLOCK_BACKGROUND: #222e37;
 $DARKER_BLOCK_BACKGROUND: #1a232c;
 $MENU_BACKGROUND: #11151d;
 $ADDITIONAL_BLOCK_BACKGROUND: #14b8a433;
+$DEFAULT_MASK_OVERLAY_BACKGROUND: #212d42;
 
 // Typography
 $MAIN_FONT_COLOR: #ffffff;
