--- a/constants/styles/globalColors.module.scss
+++ b/constants/styles/globalColors.module.scss
@@ -41,3 +41,4 @@ $FORM_BORDER_COLOR: $MAIN_GRAY_ACTION_COLOR;
 $FORM_PLACEHOLDER_COLOR: $MAIN_GRAY_ACTION_COLOR;
 $FORM_ACTIVE_BORDER_COLOR: $MAIN_PRIMARY_ACTION_COLOR;
 $FORM_ERROR_BORDER_COLOR: $MAIN_ORANGE_ACTION_COLOR;
+$FORM_DISABLED_BACKGROUND: $MAIN_GRAY_ACTION_COLOR;
